--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           <div>
             <div>
               <ul>
-                <li><a href="index.html">Work</a></li>
+                <li><a href="#vision-case-container">Work</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a target="_blank" href="./Alana-Macedo-Resume.pdf#toolbar=0" onclick="open(this.href, this.target, 'width=600, height=450, top=200, left=250'); return false;">Resume</a></li>
+                <li><a target="_blank" href="https://drive.google.com/file/d/1P7jJ-98L_WR4yVDR6XkuaLsCCETl_9QA/view?usp=sharing">Resume</a></li>
               </ul>
             </div>
           </div>
@@ -36,9 +36,10 @@
       </div>
       <div class="desktop-nav">
         <ul>
-          <li><a href="index.html">Work</a></li>
+          <li><a class="active" href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="file:///Users/alanamacedo/my-portfolio/Alana-Macedo-Resume.pdf">Resume</a></li>
+          <li><a target="_blank" href="https://drive.google.com/file/d/1P7jJ-98L_WR4yVDR6XkuaLsCCETl_9QA/view?usp=sharing">Resume</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
       <header>
@@ -55,7 +56,7 @@
                   <li><h3 class="h-three-desktop-one h-three-desktop-two"> A Product Designer</h3></li>
                   <li><h3 class="h-three-desktop-one h-three-desktop-two">based in San Francisco.</h3></li>
                 </ul>
-                <p class="font intro">Driven by research and human connection, I solve problems by addressing user needs and designing for a better future.</p>
+                <p class="intro">Driven by research and human connection, I solve problems by addressing user needs and designing for a better future.</p>
               </div>
               <div class="profile-pic">
                 <img src="images/profile-picture.png" alt="" class="prof-pic">
@@ -70,7 +71,7 @@
               <div class="about-vision-casestudy">
                 <h6 class="left UXD">User Experience Design</h6>
                 <h5 class="left line-height">Vision</h5>
-                  <p>A cloud storage application with administrative feature that help users create, connect, and collaborate in real time.</p>
+                  <p class="font">A cloud storage application with administrative feature that help users create, connect, and collaborate in real time.</p>
                 <div class="view-casestudy">
                   <a href="project.html" class="button-view-cs button">VIEW CASE STUDY</a>
                 </div>
@@ -82,9 +83,9 @@
           <h4>Let's connect!</h4>
           <div class="footer-icons">
             <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/">
-              <img src="images/linked-in-icon.png" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
+              <img src="images/linked-in-icon.png" target="_blank" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
             <a href="https://www.facebook.com/alana.macedo.16">
-              <img src="images/facebook-icon.png" alt="images/facebook-icon.png" class="social-media" width="width" height="height"></a>
+              <img src="images/facebook-icon.png" target="_blank" alt="images/facebook-icon.png" class="social-media" width="width" height="height"></a>
             <a href="contact.html">
               <img src="images/email-icon.png" alt="images/email-icon.png" class="social-media" width="width" height="height"></a>
           </div>
