--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
               <ul>
                 <li><a href="index.html">Work</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a target="_blank" href="./Alana-Macedo-Resume.pdf#toolbar=0" onclick="open(this.href, this.target, 'width=600, height=450, top=200, left=250'); return false;">Resume</a></li>
+                <li><a target="_blank" href="https://drive.google.com/file/d/1P7jJ-98L_WR4yVDR6XkuaLsCCETl_9QA/view?usp=sharing">Resume</a></li>
               </ul>
             </div>
           </div>
@@ -37,8 +37,9 @@
       <div class="desktop-nav">
         <ul>
           <li><a href="index.html">Work</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="file:///Users/alanamacedo/my-portfolio/Alana-Macedo-Resume.pdf">Resume</a></li>
+          <li><a class="active" href="about.html">About</a></li>
+          <li><a href="https://drive.google.com/file/d/1P7jJ-98L_WR4yVDR6XkuaLsCCETl_9QA/view?usp=sharing">Resume</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
       <header>
@@ -62,9 +63,9 @@
           <h4>Let's connect!</h4>
           <div class="footer-icons">
             <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/">
-              <img src="images/linked-in-icon.png" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
+              <img src="images/linked-in-icon.png" target="_blank" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
             <a href="https://www.facebook.com/alana.macedo.16">
-              <img src="images/facebook-icon.png" alt="images/facebook-icon.png" class="social-media" width="width" height="height"></a>
+              <img src="images/facebook-icon.png" target="_blank" alt="images/facebook-icon.png" class="social-media" width="width" height="height"></a>
             <a href="contact.html">
               <img src="images/email-icon.png" alt="images/email-icon.png" class="social-media" width="width" height="height"></a>
           </div>
