--- a/project.html
+++ b/project.html
@@ -29,7 +29,7 @@
                 <ul>
                   <li><a href="index.html">Work</a></li>
                   <li><a href="about.html">About</a></li>
-                  <li><a target="_blank" href="https://drive.google.com/file/d/1P7jJ-98L_WR4yVDR6XkuaLsCCETl_9QA/view?usp=sharing">Resume</a></li>
+                  <li><a href="https://drive.google.com/file/d/1P7jJ-98L_WR4yVDR6XkuaLsCCETl_9QA/view?usp=sharing" target="_blank">Resume</a></li>
                 </ul>
               </div>
             </div>
