--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <ul>
           <li><a class="active" href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a target="_blank" href="https://drive.google.com/file/d/1P7jJ-98L_WR4yVDR6XkuaLsCCETl_9QA/view?usp=sharing">Resume</a></li>
+          <li><a href="https://drive.google.com/file/d/1P7jJ-98L_WR4yVDR6XkuaLsCCETl_9QA/view?usp=sharing" target="_blank">Resume</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
