help on index.html

--- a/contact.html
+++ b/contact.html
@@ -51,10 +51,11 @@
       <div class="contact-form">
         <div>
           <h2 class="add-height"> Want to get in touch?</h2>
-          <p class="sub-text">Send me a message below, I would love to hear from you!</p>
+          <!--<p class="sub-text">Send me a message below, I would love to hear from you!</p>-->
         </div>
         <!-- CONTACT FORM -->
         <form action="https://formspree.io/xknqvrkg"method="POST" target="_blank">
+        <p class="sub-text">Send me a message below, I would love to hear from you!</p>
           <div class="name">
             <label>
               <ul class="contact-info">
