--- a/project.html
+++ b/project.html
@@ -61,35 +61,37 @@
             </div>
           </div>
         </div>
-        <div class="accomplished">
-          <ul class="roles"><h2 class="how">Design roles</h2>
-            <hr>
-            <li class="top">UX Research and Design</li>
-            <li>Branding and Identity</li>
-            <li>Visual Design</li>
-          </ul>
-          <ul class="deliverables"><h2 class="how">Deliverables</h2>
-            <hr>
-            <li class="top">User Surveys</li>
-            <li>User Interviews</li>
-            <li>Competitve Analysis</li>
-            <li>User Personas</li>
-            <li>User Stories and Flows</li>
-            <li>Content Strategy</li>
-            <li>Wireframes</li>
-            <li>Branding and Identity</li>
-            <li>Prototyping</li>
-            <li>A/B Testing</li>
-            <li>Visual Design</li>
+        <div class="margin">
+          <div class="accomplished">
+            <ul class="roles"><h2 class="how">Design roles</h2>
+              <hr>
+              <li class="top">UX Research and Design</li>
+              <li>Branding and Identity</li>
+              <li>Visual Design</li>
             </ul>
-          <ul class="tools"><h2 class="how">Tools</h2>
-            <hr>
-            <li class="top">Pen/Paper</li>
-            <li>Google Suite</li>
-            <li>Figma</li>
-            <li>Adobe Illustrator</li>
-            <li>Usability Hub</li>
-          </ul>
+            <ul class="deliverables"><h2 class="how">Deliverables</h2>
+              <hr>
+              <li class="top">User Surveys</li>
+              <li>User Interviews</li>
+              <li>Competitve Analysis</li>
+              <li>User Personas</li>
+              <li>User Stories and Flows</li>
+              <li>Content Strategy</li>
+              <li>Wireframes</li>
+              <li>Branding and Identity</li>
+              <li>Prototyping</li>
+              <li>A/B Testing</li>
+              <li>Visual Design</li>
+              </ul>
+            <ul class="tools"><h2 class="how">Tools</h2>
+              <hr>
+              <li class="top">Pen/Paper</li>
+              <li>Google Suite</li>
+              <li>Figma</li>
+              <li>Adobe Illustrator</li>
+              <li>Usability Hub</li>
+            </ul>
+          </div>
         </div>
         <section>
           <div class="margin">
