body font not working

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="vision-case-container">
               <div class="margin">
                 <div class="vision-case-image">
-                  <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center desktop-proto">
+                  <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center home-proto desktop-proto">
                 </div>
                 <div class="about-vision-casestudy">
                   <h6 class="left UXD">User Experience Design</h6>
