--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="https://use.typekit.net/bub7yri.css">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/style.css">
@@ -48,7 +52,7 @@
       </header>
     </nav>
         <div class="main-container">
-          <div class="margin">
+          <div class="big-margin smaller-margin">
             <div class="intro-with-pic">
               <div class="homepage-intro">
                 <h2 class="hello h-two-desktop"> Hi, I'm Alana!</h2>
@@ -65,14 +69,14 @@
           </div>
           <section>
             <div class="vision-case-container">
-              <div class="margin">
+              <div class="big-margin smaller-margin">
                 <div class="vision-case-image">
                   <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center home-proto desktop-proto">
                 </div>
                 <div class="about-vision-casestudy">
-                  <h6 class="left UXD">User Experience Design</h6>
-                  <h5 class="left line-height">Vision</h5>
-                    <p class="font">A cloud storage application with administrative feature that help users create, connect, and collaborate in real time.</p>
+                  <h6 class="left">User Experience Design</h6>
+                  <h3 class="left vision-index-style">Vision</h3>
+                    <p>A cloud storage application with administrative feature that help users create, connect, and collaborate in real time.</p>
                   <div class="view-casestudy">
                     <a href="project.html" class="button-view-cs button">VIEW CASE STUDY</a>
                   </div>
@@ -82,7 +86,7 @@
           </section>
         </div>
         <footer>
-          <h4>Let's connect!</h4>
+          <h4 class="vision-index-style">Let's connect!</h4>
           <div class="footer-icons">
             <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/">
               <img src="images/linked-in-icon.png" target="_blank" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
