--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
   <body>
     <div class="full-page-container">
       <nav>
-        <div class="menu-wrap">
+         <div class="menu-wrap">
           <input type="checkbox" class="toggler">
           <div class="hamburger"><div></div></div>
           <div class="menu">
@@ -50,18 +50,17 @@
       </nav>
       <div class="main-container">
         <div class="box-1">
-          <div class="margin">
+          <div class="smaller-margin">
             <div class="logo-text-button">
               <img src="images/Vision-logo.png" alt="" class="project-name">
               <p class="font">A cloud storage application with administrative features that help users create, connect, and collaborate in real time.</p>
-              <a href="https://www.figma.com/file/n1bV65dnbhnE3hULdYOR1z/Vision--Desktop-Hi-Fi-Final" class="button proto-button" target="_blank">VIEW PROTOTYPE</a>
+              <a href="https://www.figma.com/file/n1bV65dnbhnE3hULdYOR1z/Vision--Desktop-Hi-Fi-Final" class="button proto-button" id="proto-button" target="_blank">VIEW PROTOTYPE</a>
             </div>
             <div class="proto-image">
               <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center desktop-proto">
             </div>
           </div>
         </div>
-        <div class="margin">
           <div class="accomplished">
             <ul class="roles"><h2 class="how">Design roles</h2>
               <hr>
@@ -92,7 +91,6 @@
               <li>Usability Hub</li>
             </ul>
           </div>
-        </div>
         <section>
           <div class="margin">
             <div class="prob-solution">
@@ -164,8 +162,72 @@
                   <p class="text-center">Derived from the goals and frustrations,
                     I created User Stories that show the users potential tasks.
                   </p>
-                  <img src="images/user-stories.png" alt="" class="center eighty-vw">
-              </aritcle>
+                  <div class="user-stories">
+                    <table>
+                      <tbody>
+                        <tr>
+                          <th>Role</th>
+                          <th>Task</th>
+                          <th>Importance</th>
+                        </tr>
+                        <tr>
+                          <td>As a New User</td>
+                          <td>I want to create an account</td>
+                          <td>High</td>
+                        </tr>
+                        <tr>
+                          <td>As a Returning User</td>
+                          <td>I want to sign into my account</td>
+                          <td>High</td>
+                        </tr>
+                        <tr>
+                          <td>As a Returning User</td>
+                          <td>I want to sign out of my account</td>
+                          <td>High</td>
+                        </tr>
+                        <tr>
+                          <td>As a Returning User</td>
+                          <td>I want to send a message</td>
+                          <td>High</td>
+                        </tr>
+                        <tr>
+                          <td>As a Returning User</td>
+                          <td>I want to share content</td>
+                          <td>High</td>
+                        </tr>
+                        <tr>
+                          <td>As a Returning User</td>
+                          <td>I want to create content</td>
+                          <td>High</td>
+                        </tr>
+                        <tr>
+                          <td>As a Returning User</td>
+                          <td>I want to organize content</td>
+                          <td>High</td>
+                        </tr>
+                        <tr>
+                          <td>As a Returning User</td>
+                          <td>I want to pin content</td>
+                          <td>High</td>
+                        </tr>
+                        <tr>
+                          <td>As a Returning User</td>
+                          <td>I want to upload content</td>
+                          <td>High</td>
+                        </tr>
+                        <tr>
+                          <td>As a Returning User</td>
+                          <td>I want to create a folder</td>
+                          <td>High</td>
+                        </tr>
+                        <tr>
+                          <td>As a Returning User</td>
+                          <td>I want to view "Shared with Me"</td>
+                          <td>High</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
               <article>
                 <h3>User Flows</h3>
                   <p class="text-center">From the stories, I sketched out each individual flow to begin to create the content strategy.
