--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <ul>
                 <li><a href="#vision-case-container">Work</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="https://drive.google.com/file/d/1P7jJ-98L_WR4yVDR6XkuaLsCCETl_9QA/view?usp=sharing" target="_blank">Resume</a></li>
+                <li><a href="https://drive.google.com/file/d/1v349ufAJdmR_fLsZR1YRuORnOvLvcJYR/view?usp=sharing" target="_blank">Resume</a></li>
               </ul>
             </div>
           </div>
@@ -46,7 +46,7 @@
         <ul>
           <li><a class="active" href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="https://drive.google.com/file/d/1P7jJ-98L_WR4yVDR6XkuaLsCCETl_9QA/view?usp=sharing" target="_blank">Resume</a></li>
+          <li><a href="https://drive.google.com/file/d/1v349ufAJdmR_fLsZR1YRuORnOvLvcJYR/view?usp=sharingg" target="_blank">Resume</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
@@ -59,10 +59,10 @@
           <div class="big-margin smaller-margin">
             <div class="intro-with-pic">
               <div class="homepage-intro">
-                <h2 class="hello h-two-desktop"> Hi, I'm Alana!</h2>
+                <h2 class="hello"> Hi, I'm Alana!</h2>
                 <ul>
-                  <li><h3 class="h-three-desktop-one h-three-desktop-two"> A Product Designer</h3></li>
-                  <li><h3 class="h-three-desktop-one h-three-desktop-two">based in San Francisco.</h3></li>
+                  <li><h3>A Product Designer</h3></li>
+                  <li><h3>based in San Francisco.</h3></li>
                 </ul>
                 <p class="intro">Driven by research and human connection, I solve problems by addressing user needs and designing for a better future.</p>
               </div>
@@ -78,8 +78,8 @@
                   <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center home-proto desktop-proto">
                 </div>
                 <div class="about-vision-casestudy">
-                  <h6 class="left">User Experience Design</h6>
                   <h3 class="left vision-index-style">Vision</h3>
+                  <h5 class="left freight">User Experience Design</h5>
                     <p>A cloud storage application with administrative feature that help users create, connect, and collaborate in real time.</p>
                   <div class="view-casestudy">
                     <a href="project.html" class="button-view-cs button">VIEW CASE STUDY</a>
@@ -90,14 +90,14 @@
           </section>
         </div>
         <footer>
-          <h4 class="vision-index-style">Let's connect!</h4>
+          <h4 class="vision-index-style">Let's Connect!</h4>
           <div class="footer-icons">
-            <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/">
-              <img src="images/linked-in-icon.png" target="_blank" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
-            <a href="https://www.facebook.com/alana.macedo.16">
-              <img src="images/facebook-icon.png" target="_blank" alt="images/facebook-icon.png" class="social-media" width="width" height="height"></a>
+            <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/" target="_blank">
+              <img src="images/linkedin.png" target="_blank" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
+            <a href="https://github.com/alanamacedo" target="_blank">
+              <img src="images/github.png" target="_blank" alt="images/facebook-icon.png" class="social-media fb" width="width" height="height"></a>
             <a href="contact.html">
-              <img src="images/email-icon.png" alt="images/email-icon.png" class="social-media" width="width" height="height"></a>
+            <img src="images/mail.png" alt="images/email.png" class="social-media" width="width" height="height"></a>
           </div>
           <h6 class="copyright">Copyright Alana Macedo 2020</h6>
         </footer>
