--- a/project.html
+++ b/project.html
@@ -47,7 +47,7 @@
           <ul>
             <li><a href="index.html">Work</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="https://drive.google.com/file/d/1P7jJ-98L_WR4yVDR6XkuaLsCCETl_9QA/view?usp=sharing" target="_blank">Resume</a></li>
+            <li><a href="https://drive.google.com/file/d/1v349ufAJdmR_fLsZR1YRuORnOvLvcJYR/view?usp=sharing" target="_blank">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -62,7 +62,7 @@
             <div class="logo-text-button">
               <img src="images/Vision-logo.png" alt="" class="project-name">
               <p class="font">A cloud storage application with administrative features that help users create, connect, and collaborate in real time.</p>
-              <a href="https://www.figma.com/file/n1bV65dnbhnE3hULdYOR1z/Vision--Desktop-Hi-Fi-Final" class="button proto-button" id="proto-button" target="_blank">VIEW PROTOTYPE</a>
+              <a href="https://drive.google.com/file/d/1v349ufAJdmR_fLsZR1YRuORnOvLvcJYR/view?usp=sharing" class="button proto-button" id="proto-button" target="_blank">VIEW PROTOTYPE</a>
             </div>
             <div class="proto-image">
               <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center desktop-proto">
@@ -365,25 +365,26 @@
                 </article>
                 <article>
                   <h3>Conclusion + Takeaways</h3>
-                    <p>
+                    <p class="end">
                       After completing this project, I’ve gained a lot of insight into what worked and what didn’t. I learned that paper prototypes are a great way to quickly test an idea before building out a lo-fi version. Keeping all your sketches,
                       hand-drawn prototypes organized and together is extremely helpful when looking back and creating a case study. If I were to change something about the way I went about this project, it would be to constantly look back at the user
                       stories and user personas in order to stay within scope. I found myself getting excited about the additional features that I wanted to add onto the app that essentially I completely built out both a mobile app and desktop app and in the
                       end had to trim back some frames (I saved them though, just in case!) UsabilityHub turned out to be an excellent tool for quick A/B testing, which ended up being very helpful in my design decisions.
                     </p>
+                    <a href="https://drive.google.com/file/d/1v349ufAJdmR_fLsZR1YRuORnOvLvcJYR/view?usp=sharing" class="button proto-button bottom-case" id="proto-button" target="_blank">VIEW PROTOTYPE</a>
                 </article>
               </div>
             </section>
           </div>
         <footer>
-          <h4>Let's connect!</h4>
+          <h4>Let's Connect!</h4>
           <div class="footer-icons">
             <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/" target="_blank">
-              <img src="images/linked-in-icon.png" target="_blank" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
-            <a href="https://www.facebook.com/alana.macedo.16" target="_blank">
-              <img src="images/facebook-icon.png" target="_blank" alt="images/facebook-icon.png" class="social-media fb" width="width" height="height"></a>
+              <img src="images/linkedin.png" target="_blank" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
+            <a href="https://github.com/alanamacedo" target="_blank">
+              <img src="images/github.png" target="_blank" alt="images/facebook-icon.png" class="social-media fb" width="width" height="height"></a>
             <a href="contact.html">
-            <img src="images/email-icon.png" alt="images/email-icon.png" class="social-media" width="width" height="height"></a>
+            <img src="images/mail.png" alt="images/email-icon.png" class="social-media" width="width" height="height"></a>
           </div>
           <h6>Copyright Alana Macedo 2020</h6>
         </footer>
