--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
               <ul>
                 <li><a href="index.html">Work</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="https://drive.google.com/file/d/1P7jJ-98L_WR4yVDR6XkuaLsCCETl_9QA/view?usp=sharing" target="_blank">Resume</a></li>
+                <li><a href="https://drive.google.com/file/d/1v349ufAJdmR_fLsZR1YRuORnOvLvcJYR/view?usp=sharing" target="_blank">Resume</a></li>
               </ul>
             </div>
           </div>
@@ -46,7 +46,7 @@
         <ul>
           <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="https://drive.google.com/file/d/1P7jJ-98L_WR4yVDR6XkuaLsCCETl_9QA/view?usp=sharing" target="_blank">Resume</a></li>
+          <li><a href="https://drive.google.com/file/d/1v349ufAJdmR_fLsZR1YRuORnOvLvcJYR/view?usp=sharing" target="_blank">Resume</a></li>
           <li><a class="active" href="contact.html">Contact</a></li>
         </ul>
       </div>
@@ -63,7 +63,9 @@
         </div>
         <!-- CONTACT FORM -->
         <form action="https://formspree.io/xknqvrkg"method="POST" target="_blank">
-        <p class="sub-text">Send me a message below, I would love to hear from you!</p>
+        <div class="flexible">
+          <p class="sub-text">Send me a message below, I would love to hear from you!</p>
+        </div>
           <div class="name">
             <label>
               <ul class="contact-info">
@@ -88,19 +90,19 @@
               </ul>
             </label>
           </div>
-          <input type="submit" id="button" value="Send Message"</input>
+          <input type="submit" id="button" value="SEND MESSAGE"</input>
         </form>
       </div>
     </div>
     <footer>
-      <h4>Let's connect!</h4>
+      <h4>Let's Connect!</h4>
       <div class="footer-icons">
-        <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/">
-          <img src="images/linked-in-icon.png" target="_blank" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
-        <a href="https://www.facebook.com/alana.macedo.16">
-          <img src="images/facebook-icon.png" target="_blank" alt="images/facebook-icon.png" class="social-media" width="width" height="height"></a>
+        <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/" target="_blank">
+          <img src="images/linkedin.png" target="_blank" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
+        <a href="https://github.com/alanamacedo" target="_blank">
+          <img src="images/github.png" target="_blank" alt="images/facebook-icon.png" class="social-media fb" width="width" height="height"></a>
         <a href="contact.html">
-          <img src="images/email-icon.png" alt="images/email-icon.png" class="social-media" width="width" height="height"></a>
+        <img src="images/mail.png" alt="images/email-icon.png" class="social-media" width="width" height="height"></a>
       </div>
       <h6 class="copyright">Copyright Alana Macedo 2020</h6>
     </footer>
